--- a/product_examples/homeowners/config/products/homeowners/policy/exposures/dwelling/perils/dwelling.premium.liquid
+++ b/product_examples/homeowners/config/products/homeowners/policy/exposures/dwelling/perils/dwelling.premium.liquid
@@ -2,21 +2,43 @@
 {% assign exposure_v = data.exposure_characteristics.field_values %}
 {% assign peril_v = data.peril_characteristics.field_values %}
 
-{% assign living_area = exposure_v.living_area %}
 
 {% case policy_v.policy_type %}
 {% when "HO-2 — Broad Form" %}
-  {% assign living_area_multiplier = 0.285 %}
+  {% assign policy_type_multiplier = 0.88 %}
 {% when "HO-5 - Comprehensive Form" %}
-  {% assign living_area_multiplier = 0.345 %}
+  {% assign policy_type_multiplier = 1.16 %}
 {% when "HO-8 - Older Home Form" %}
-  {% assign living_area_multiplier = 0.310 %}
+  {% assign policy_type_multiplier = 0.96 %}
 {% else %}
   {% comment %} HO-3 Broad Form {% endcomment %}
-  {% assign living_area_multiplier = 0.333 %}
+  {% assign policy_type_multiplier = 1 %}
 {% endcase %}
 
-{% assign base_premium = living_area | times: living_area_multiplier %}
+{% assign living_area = exposure_v.living_area %}
+
+{% comment %} Basic cost estimate is $150/sqft replacement cost {% endcomment %}
+{% assign replacement_cost = living_area | times: 150 %}
+
+{% case exposure_v.state}
+{% when "CA" %}
+  {% assign replacement_cost_multiplier = replacement_cost_multiplier | times: 1.35 %}
+{% when "FL" %}
+  {% assign replacement_cost_multiplier = replacement_cost_multiplier | times: 1.28 %}
+{% when "TX" %}
+  {% assign replacement_cost_multiplier = replacement_cost_multiplier | times: 1.05 %}
+{% when "OH" %}
+  {% assign replacement_cost = replacement_cost_multiplier | times: 0.94 %}
+{% when "NY" %}
+  {% assign replacement_cost = replacement_cost_multiplier | times: 1.12 %}
+{% endcase %}
+
+{% assign dwelling_exposure_units = replacement_cost | | divided_by: 100 %}
+
+{% comment %} Basic premium per $100 exposure unit $0.32 {% endcomment %}
+{% assign base_premium = dwelling_exposure_units | times: 0.32 %}
+
+{% comment %} Adjustments for structure characteristics and claims history {% endcomment %}
 
 {% assign dwelling_type_multiplier = "dwelling_type_table" | lookup: exposure_v.dwelling_type %}
 {% assign base_premium = base_premium | times: dwelling_type_multiplier %}
@@ -39,6 +61,8 @@
 {% assign loss_of_use_premium = cov_limit | times: 0.00042 %} 
 
 {% assign premium = base_premium | plus: loss_of_use_premium | round %}
+
+{% comment %} Minimum premium $100 {% endcomment %}
 
 {% if premium < 100 %}
   {% assign premium = 100 %}
